Control de estudio sin los reportes

--- a/archViejos/estudiantes.html
+++ b/archViejos/estudiantes.html
@@ -4,12 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Estudiante</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/png" href="/img/libro.png">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@300;400;600;800&display=swap');
+    <meta name="description" content="Panel de estudiante del Colegio Bíblico Universal Horeb">
+    <meta name="author" content="Colegio Bíblico Universal Horeb">
+    <title>Perfil Estudiante - CBUH</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/img/libro.png">
+
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@300;400;600;800&display=swap"
+        rel="stylesheet">
+
+    <style>
+        /* ========================================
+           CONFIGURACIÓN DE TIPOGRAFÍA
+           ======================================== */
         .font-heading {
             font-family: 'Anton', sans-serif;
             letter-spacing: 1px;
@@ -19,7 +33,9 @@
             font-family: 'Inter', sans-serif;
         }
 
-        /* Vinotinto rico y elegante (el que te gustó) */
+        /* ========================================
+           COLORES INSTITUCIONALES
+           ======================================== */
         .bg-cbuh-dark {
             background-color: #4A0E1C;
         }
