--- a/PaginaPrincipal/login.html
+++ b/PaginaPrincipal/login.html
@@ -4,16 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión</title>
-    <!-- Fuente Montserrat para que coincida con el estilo -->
+    <meta name="description" content="Portal de acceso para estudiantes del Colegio Bíblico Universal Horeb">
+    <meta name="author" content="Colegio Bíblico Universal Horeb">
+    <title>Inicio de Sesión - CBUH</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/img/libro.png">
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/png" href="/img/libro.png">
+
     <style>
+        /* ========================================
+           ESTILOS PERSONALIZADOS
+           ======================================== */
         body {
             font-family: 'Montserrat', sans-serif;
-            /* Fondo actualizado a un degradado radial elegante y limpio */
             background: radial-gradient(ellipse at center, #5e1b26 0%, #1a0508 100%);
             min-height: 100vh;
         }
@@ -46,7 +55,6 @@
             transform: scale(0.98);
         }
 
-        /* Efecto para que el logo sobresalga */
         .logo-container {
             margin-top: -80px;
         }
@@ -55,69 +63,76 @@
 
 <body class="min-h-screen flex items-center justify-center p-4">
 
-    <!-- Contenedor Principal de la Tarjeta -->
-    <div class="login-card w-full max-w-md rounded-[30px] p-8 pb-10 relative flex flex-col items-center">
+    <!-- ========================================
+         CONTENEDOR PRINCIPAL
+         ======================================== -->
+    <main class="login-card w-full max-w-md rounded-[30px] p-8 pb-10 relative flex flex-col items-center">
 
-        <!-- Área del Logo (Sube tu imagen aquí) -->
+        <!-- ========================================
+             ÁREA DEL LOGO
+             ======================================== -->
         <div class="logo-container mb-6 relative z-10">
-            <!-- 
-                IMPORTANTE: Reemplaza 'src' con la ruta de tu logo.
-                He puesto un placeholder rectangular vertical similar al escudo.
-            -->
-            <img src="/img/cbuh.png" alt="Logo Institucional" class="w-32 md:w-40 drop-shadow-2xl object-contain"
+            <img src="/img/cbuh.png" alt="Logo Institucional Colegio Bíblico Universal Horeb"
+                class="w-32 md:w-40 drop-shadow-2xl object-contain"
                 style="filter: drop-shadow(0 4px 6px rgba(0,0,0,0.3));">
         </div>
 
-        <!-- Título -->
-        <h1 class="text-2xl md:text-3xl font-bold text-black mb-8 tracking-wide text-center">
-            PORTAL ESTUDIANTIL
-        </h1>
+        <!-- ========================================
+             TÍTULO DE LA PÁGINA
+             ======================================== -->
+        <header>
+            <h1 class="text-2xl md:text-3xl font-bold text-black mb-8 tracking-wide text-center">
+                PORTAL ESTUDIANTIL
+            </h1>
+        </header>
 
-        <!-- Formulario -->
-        <form class="w-full space-y-6 flex flex-col items-center">
+        <!-- ========================================
+             FORMULARIO DE ACCESO
+             ======================================== -->
+        <form class="w-full space-y-6 flex flex-col items-center" method="post" action="estudiantes.html">
 
             <!-- Campo Cédula -->
             <div class="input-glow w-full rounded-xl flex items-center px-4 py-3 relative group">
-                <!-- Icono Usuario -->
+                <label for="cedula" class="sr-only">Cédula de Identidad</label>
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-[#721c24] mr-3" fill="currentColor"
-                    viewBox="0 0 24 24">
+                    viewBox="0 0 24 24" aria-hidden="true">
                     <path
                         d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
                 </svg>
-                <input type="text" placeholder="Cédula"
+                <input type="text" id="cedula" name="cedula" placeholder="Cédula"
                     class="bg-transparent border-none outline-none text-gray-800 placeholder-gray-800 text-lg w-full font-medium"
-                    required>
+                    required autocomplete="username">
             </div>
 
             <!-- Campo Contraseña -->
             <div class="input-glow w-full rounded-xl flex items-center px-4 py-3 relative group">
-                <!-- Icono Candado -->
+                <label for="password" class="sr-only">Contraseña</label>
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-[#721c24] mr-3" fill="currentColor"
-                    viewBox="0 0 24 24">
+                    viewBox="0 0 24 24" aria-hidden="true">
                     <path
                         d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
                 </svg>
-                <input type="password" placeholder="Contraseña"
+                <input type="password" id="password" name="password" placeholder="Contraseña"
                     class="bg-transparent border-none outline-none text-gray-800 placeholder-gray-800 text-lg w-full font-medium"
-                    required>
+                    required autocomplete="current-password">
             </div>
 
             <!-- Botón Acceder -->
             <button type="submit"
-                class="btn-gold w-full py-3 rounded-full text-black font-bold text-xl tracking-wider mt-4 hover:brightness-110">
-                <a href="estudiantes.html">
-                    ACCEDER
-                </a>
+                class="btn-gold w-full py-3 rounded-full text-black font-bold text-xl tracking-wider mt-4 hover:brightness-110 transition-all duration-200">
+                ACCEDER
             </button>
 
-            <!-- Enlace Olvidar Contraseña -->
-            <a href="estudiantes.html"
-                class="text-[#5a1a25] underline decoration-1 underline-offset-4 text-sm font-semibold hover:text-black transition-colors mt-2">
-                ¿Olvidaste tu contraseña?
-            </a>
+            <!-- Enlace Recuperar Contraseña -->
+            <footer class="w-full text-center">
+                <a href="#"
+                    class="text-[#5a1a25] underline decoration-1 underline-offset-4 text-sm font-semibold hover:text-black transition-colors mt-2 inline-block">
+                    ¿Olvidaste tu contraseña?
+                </a>
+            </footer>
 
         </form>
-    </div>
+    </main>
 
 </body>
 
