feat: Introduce initial admin, teacher, and student portals with their respective UI, scripts, and authentication, while updating Tailwind configuration and removing old SQL migration files.

--- a/auth/login.html
+++ b/auth/login.html
@@ -40,8 +40,8 @@
                         <span class="material-symbols-outlined text-accent-gold text-4xl">school</span>
                     </div>
                     <h1 class="text-5xl font-display font-bold mb-4 leading-tight">
-                        Centro Bíblico<br />
-                        <span class="text-accent-gold italic">Unido Hispano</span>
+                        Colegio Bíblico <br />
+                        <span class="text-accent-gold italic">Universal Horeb</span>
                     </h1>
                     <div class="w-20 h-1 bg-accent-gold mb-6"></div>
                     <p class="text-white/80 text-lg font-light leading-relaxed max-w-md">
@@ -106,8 +106,12 @@
                                 <span
                                     class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-vinotinto/40">lock</span>
                                 <input type="password" id="password" required
-                                    class="w-full pl-12 pr-4 py-3 border border-beige-dark bg-beige focus:border-accent-gold focus:outline-none focus:ring-2 focus:ring-accent-gold/20 transition-all"
+                                    class="w-full pl-12 pr-12 py-3 border border-beige-dark bg-beige focus:border-accent-gold focus:outline-none focus:ring-2 focus:ring-accent-gold/20 transition-all"
                                     placeholder="••••••••">
+                                <button type="button" id="toggle-password"
+                                    class="absolute right-4 top-1/2 -translate-y-1/2 text-vinotinto/40 hover:text-vinotinto transition-colors focus:outline-none">
+                                    <span class="material-symbols-outlined text-lg select-none">visibility</span>
+                                </button>
                             </div>
                         </div>
 
